--- a/ccicons.dtx
+++ b/ccicons.dtx
@@ -29,16 +29,19 @@
 %
 % \iffalse
 %<package>\NeedsTeXFormat{LaTeX2e}[1999/12/01]
-%<package>\ProvidesPackage{ccicons}[2009/12/14 v1.1 LaTeX support for Creative Commons icons]
-%<fontdef>\ProvidesFile{uccicons.fd}[2009/12/14 v1.1 font definitions for U/ccicons]
+%<package>\ProvidesPackage{ccicons}[2011/05/22 v1.2 LaTeX support for Creative Commons icons]
+%<fontdef>\ProvidesFile{uccicons.fd}[2011/05/22 v1.2 font definitions for U/ccicons]
 %
 %<*driver>
 \documentclass{ltxdoc}
 
+\usepackage[T1]{fontenc}
+\usepackage{charter}
+\usepackage{inconsolata}
 \usepackage{ccicons}
 \usepackage{longtable}
 
-\newcommand{\pkg}[1]{\textsf{#1}}
+\newcommand{\pkg}[1]{\mbox{#1}}
 \newcommand{\url}[1]{\mbox{\texttt{#1}}}
 
 \EnableCrossrefs         
@@ -55,11 +58,9 @@
 %
 % \DoNotIndex{\newcommand}
 % 
-% \title{The \pkg{ccicons} package\thanks{This document
-%   corresponds to \pkg{ccicons}~\fileversion, dated \filedate.}}
+% \title{The \pkg{ccicons} package}
 % \author{Michael Ummels \\ \texttt{michael.ummels@rwth-aachen.de}}
-% \date{}
-%
+% \date{\fileversion\ -- \filedate}
 % \maketitle
 %
 % \begin{abstract}
@@ -139,6 +140,7 @@
 %
 % Version 1.0 (2009/11/29): Initial version \\
 % Version 1.1 (2009/12/14): New font with additional glyphs
+% Version 1.2 (2011/05/22): Optimised some glyphs
 %
 % \StopEventually{}
 %
