Corrected typos in documentation

--- a/ccicons.dtx
+++ b/ccicons.dtx
@@ -83,7 +83,7 @@
 %
 % \section{Usage}
 %
-% To use this package in your \LaTeX document, you need to issue
+% To use this package in your \LaTeX\ document, you need to issue
 % \begin{quote}
 % |\usepackage{ccicons}|
 % \end{quote}
@@ -139,7 +139,7 @@
 % \section{Version history}
 %
 % Version 1.0 (2009/11/29): Initial version \\
-% Version 1.1 (2009/12/14): New font with additional glyphs
+% Version 1.1 (2009/12/14): New font with additional glyphs \\
 % Version 1.2 (2011/05/22): Optimised some glyphs
 %
 % \StopEventually{}
