Added PDF documentation to files covered under LPPL

--- a/ccicons.dtx
+++ b/ccicons.dtx
@@ -16,7 +16,7 @@
 %
 % This work consists of the files ccicons.dtx, ccicons.ins,
 % ccicons.map, ccicons.pfb, ccicons.tfm, ccicons-u.enc and
-% the derived files ccicons.sty and uccicons.fd.
+% the derived files ccicons.pdf, ccicons.sty and uccicons.fd.
 %
 % The files ccicons.pfb and ccicons.tfm have been
 % generated from the file cc-icons-svg.zip available from
