Replaced hyperref by hypdoc

--- a/ccicons.dtx
+++ b/ccicons.dtx
@@ -40,7 +40,7 @@
 \usepackage[scaled=1.05]{inconsolata}
 \usepackage{ccicons}
 \usepackage{longtable}
-\usepackage{hyperref}
+\usepackage{hypdoc}
 \usepackage{microtype}
 
 \hypersetup{
