Fixed documentation title

--- a/ccicons.dtx
+++ b/ccicons.dtx
@@ -86,7 +86,7 @@
 %
 % \DoNotIndex{\newcommand}
 % 
-% \title{\LaTeX support for Creative Commons Icons}
+% \title{\LaTeX\ support for Creative Commons Icons}
 % \author{Michael Ummels \\ \texttt{michael.ummels@rwth-aachen.de}}
 % \date{\fileversion\ -- \filedate}
 % \maketitle
