--- a/ccicons.dtx
+++ b/ccicons.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-% Copyright (C) 2012 by Michael Ummels <michael.ummels@rwth-aachen.de>
+% Copyright (C) 2013 by Michael Ummels <michael.ummels@rwth-aachen.de>
 %
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either version 1.3c
@@ -14,18 +14,17 @@
 % 
 % The Current Maintainer of this work is Michael Ummels.
 %
-% This work consists of the files ccicons.dtx, ccicons.ins,
-% ccicons.map, ccicons.pfb, ccicons.tfm, ccicons-u.enc and
-% the derived files ccicons.pdf and ccicons.sty.
+% This work consists of the files ccicons.dtx, ccicons.ins
+% and the derived files ccicons.pdf and ccicons.sty.
 %
 % \fi
 %
 % \iffalse
 %<*driver>
-\ProvidesFile{ccicons.dtx}[2012/05/22 v1.4 LaTeX support for Creative Commons icons]
+\ProvidesFile{ccicons.dtx}[2013/04/16 v1.5 LaTeX support for Creative Commons icons]
 %</driver>
 %<package>\NeedsTeXFormat{LaTeX2e}[1999/12/01]
-%<package>\ProvidesPackage{ccicons}[2012/05/22 v1.4 LaTeX support for Creative Commons icons]
+%<package>\ProvidesPackage{ccicons}[2013/04/16 v1.5 LaTeX support for Creative Commons icons]
 %<*driver>
 \documentclass{ltxdoc}
 
@@ -293,6 +292,8 @@
 % Version 1.3 (2011/09/18): Merged font definitions into style file \\
 % Version 1.4 (2012/05/22): Added copyright logo, adjusted vertical
 % alignment, and added scale option
+% Version 1.5 (2013/04/16): Relicensed font components and included
+% OpenType font.
 %
 %
 % \Finale
