--- a/ccicons.dtx
+++ b/ccicons.dtx
@@ -291,7 +291,7 @@
 % Version 1.2 (2011/05/22): Optimised some glyphs \\
 % Version 1.3 (2011/09/18): Merged font definitions into style file \\
 % Version 1.4 (2012/05/22): Added copyright logo, adjusted vertical
-% alignment, and added scale option
+% alignment, and added scale option \\
 % Version 1.5 (2013/04/16): Relicensed font components and included
 % OpenType font.
 %
