Update copyright notice
Fix typos

--- a/ccicons.dtx
+++ b/ccicons.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-% Copyright (C) 2013 by Michael Ummels <michael.ummels@rwth-aachen.de>
+% Copyright (C) 2011-2015 by Michael Ummels <michael.ummels@rwth-aachen.de>
 %
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either version 1.3c
