--- a/ccicons.dtx
+++ b/ccicons.dtx
@@ -297,4 +297,64 @@
 %
 %
 % \Finale
-\endinput
+% \endinput
+%
+% \iffalse
+%<*test>
+% \fi
+%    \begin{macrocode}
+\documentclass[a4paper]{article}
+
+\usepackage[copyright]{ccicons}
+
+\setlength{\parindent}{0pt}
+
+\begin{document}
+\ccLogo
+\ccAttribution
+\ccShareAlike
+\ccNoDerivatives
+\ccNonCommercial
+\ccNonCommercialJP
+\ccZero
+\ccPublicDomain
+\ccSampling
+\ccShare
+\ccRemix
+\ccCopy
+
+\textcopyright
+
+\ccby
+
+\ccbysa
+
+\ccbynd
+
+\ccbync
+
+\ccbynceu
+
+\ccbyncjp
+
+\ccbyncsa
+
+\ccbyncsaeu
+
+\ccbyncsajp
+
+\ccbyncnd
+
+\ccbyncndeu
+
+\ccbyncndjp
+
+\cczero
+
+\ccpd
+\end{document}
+%    \end{macrocode}
+%
+% \iffalse
+%</test>
+% \fi
