--- a/ccicons.dtx
+++ b/ccicons.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-% Copyright (C) 2011-2015 by Michael Ummels <michael.ummels@rwth-aachen.de>
+% Copyright (C) 2011-2017 by Michael Ummels <michael.ummels@rwth-aachen.de>
 %
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either version 1.3c
@@ -21,10 +21,10 @@
 %
 % \iffalse
 %<*driver>
-\ProvidesFile{ccicons.dtx}[2013/04/16 v1.5 LaTeX support for Creative Commons icons]
+\ProvidesFile{ccicons.dtx}[2017/10/30 v1.6 LaTeX support for Creative Commons icons]
 %</driver>
 %<package>\NeedsTeXFormat{LaTeX2e}[1999/12/01]
-%<package>\ProvidesPackage{ccicons}[2013/04/16 v1.5 LaTeX support for Creative Commons icons]
+%<package>\ProvidesPackage{ccicons}[2017/10/30 v1.6 LaTeX support for Creative Commons icons]
 %<*driver>
 \documentclass{ltxdoc}
 
@@ -58,7 +58,7 @@
 %</driver>
 % \fi
 %
-% \CheckSum{242}
+% \CheckSum{249}
 % \CharacterTable
 %  {Upper-case    \A\B\C\D\E\F\G\H\I\J\K\L\M\N\O\P\Q\R\S\T\U\V\W\X\Y\Z
 %   Lower-case    \a\b\c\d\e\f\g\h\i\j\k\l\m\n\o\p\q\r\s\t\u\v\w\x\y\z
@@ -128,6 +128,7 @@
 %   |\ccNonCommercialJP| & \typesetcc{\ccNonCommercialJP} \\[1ex]
 %   |\ccZero| & \typesetcc{\ccZero} \\[1ex]
 %   |\ccPublicDomain| & \typesetcc{\ccPublicDomain} \\[1ex]
+%   |\ccPublicDomainAlt| & \typesetcc{\ccPublicDomainAlt} \\[1ex]
 %   |\ccSampling| & \typesetcc{\ccSampling} \\[1ex]
 %   |\ccShare| & \typesetcc{\ccShare} \\[1ex]
 %   |\ccRemix| & \typesetcc{\ccRemix} \\[1ex]
@@ -214,6 +215,7 @@
 \newcommand{\ccicons@share}{\char10}
 \newcommand{\ccicons@remix}{\char11}
 \newcommand{\ccicons@copy}{\char12}
+\newcommand{\ccicons@pdalt}{\char13}
 %    \end{macrocode}
 % The following commands provide high-level access to to the font. We
 % define a command for each character in the font.
@@ -226,6 +228,7 @@
 \newcommand{\ccNonCommercialEU}{{\ccicons@font\ccicons@nceu}}
 \newcommand{\ccNonCommercialJP}{{\ccicons@font\ccicons@ncjp}}
 \newcommand{\ccPublicDomain}{{\ccicons@font\ccicons@pd}}
+\newcommand{\ccPublicDomainAlt}{{\ccicons@font\ccicons@pdalt}}
 \newcommand{\ccZero}{{\ccicons@font\ccicons@zero}}
 \newcommand{\ccSampling}{{\ccicons@font\ccicons@sampling}}
 \newcommand{\ccShare}{{\ccicons@font\ccicons@share}}
@@ -293,7 +296,8 @@
 % Version 1.4 (2012/05/22): Added copyright logo, adjusted vertical
 % alignment, and added scale option \\
 % Version 1.5 (2013/04/16): Relicensed font components and included
-% OpenType font.
+% OpenType font. \\
+% Version 1.6 (2017/10/30): Incorporated new Public Domain icon
 %
 %
 % \Finale
@@ -319,6 +323,7 @@
 \ccNonCommercialJP
 \ccZero
 \ccPublicDomain
+\ccPublicDomainAlt
 \ccSampling
 \ccShare
 \ccRemix
