--- a/ccicons.dtx
+++ b/ccicons.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-% Copyright (C) 2011-2017 by Michael Ummels <michael.ummels@rwth-aachen.de>
+% Copyright (C) 2011-2025 by Michael Ummels <michael@ummels.de>
 %
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either version 1.3c
@@ -80,7 +80,7 @@
 % \DoNotIndex{\newcommand}
 % 
 % \title{\LaTeX\ support for Creative Commons Icons}
-% \author{Michael Ummels \\ \texttt{michael.ummels@rwth-aachen.de}}
+% \author{Michael Ummels \\ \texttt{michael@ummels.de}}
 % \date{\fileversion\ -- \filedate}
 % \maketitle
 %
