--- a/ccicons.dtx
+++ b/ccicons.dtx
@@ -6,9 +6,9 @@
 % conditions of the LaTeX Project Public License, either version 1.3c
 % of this license or (at your option) any later version.
 % The latest version of this license is in
-%   http://www.latex-project.org/lppl.txt
-% and version 1.3 or later is part of all distributions of LaTeX
-% version 2005/12/01 or later.
+%   https://www.latex-project.org/lppl.txt
+% and version 1.3c or later is part of all distributions of LaTeX
+% version 2008 or later.
 %
 % This work has the LPPL maintenance status `maintained'.
 % 
@@ -93,7 +93,7 @@
 %
 % \section{Introduction}
 %
-% Creative Commons (\url{http://creativecommons.org}) licenses have become
+% Creative Commons (\url{https://creativecommons.org}) licenses have become
 % increasingly popular for authors who want to retain their copyright but give
 % other people the possibility to share and build upon their work. For each
 % of the licenses that Creative Commons offers, there exists a set of icons
@@ -104,7 +104,7 @@
 %
 % Please note that all icons that can be typeset using this package are
 % trademarks of Creative Commons and are subject to the Creative Commons
-% trademark policy (see \url{http://creativecommons.org/policies}).
+% trademark policy (see \url{https://creativecommons.org/policies}).
 %
 % \section{Usage}
 %
@@ -138,7 +138,7 @@
 % \noindent
 % Additionally, for each of the common Creative Commons licenses there is a
 % command to typeset the CC logo together with the icons applicable for that
-% license (see \url{http://creativecommons.org/licenses}):
+% license (see \url{https://creativecommons.org/licenses}):
 %
 % \medskip\noindent
 % \begin{tabular}{ll}
